# tide

./: .gitignore  Makefile  README.md  pyproject.toml
api/: __init__.py
api/protoapi_spec/: __init__.py
api/protoapi_spec/tide_date/: __init__.py
api/protoapi_spec/tide_date/v1/: __init__.py  api.proto  api.yaml  api_pb2.py  api_pb2.pyi  api_pb2_grpc.py  models.py
api/protoapi_spec/types/: error.proto  error_pb2.py  error_pb2.pyi  error_pb2_grpc.py
cmd/tide-date/: __init__.py  main.py
cmd/tide-date/app/: __init__.py  server.py
cmd/tide-date/app/options/: __init__.py  options.py  plugin_config.py  plugin_logs.py  plugin_mysql.py  plugin_opentelemetry.py  plugin_redis.py  plugin_web_handler.py
cmd/tide-vllm/: __init__.py  main.py
cmd/tide-vllm/app/: __init__.py  server.py
cmd/tide-vllm/app/options/: __init__.py  options.py  plugin_config.py  plugin_logs.py  plugin_vllm.py  plugin_web_handler.py
conf/: tide-date.yaml  tide-vllm.yaml
doc/: proto_compilation_guide.md
docs/: tide-architecture-design.md  tide-vllm-design.md
pkg/: __init__.py
pkg/tide_date/: __init__.py
pkg/tide_date/application/: __init__.py  application.py  tide_date_handler.py
pkg/tide_date/domain/: __init__.py
pkg/tide_date/domain/date/: __init__.py  entity.py  error.py  factory.py  repository.py
pkg/tide_date/domain/kit/: __init__.py
pkg/tide_date/domain/kit/date/: __init__.py  repository.py
pkg/tide_date/infrastructure/: __init__.py
pkg/tide_date/infrastructure/local/: __init__.py  date_repository.py
pkg/tide_date/provider/: __init__.py  provider.py
pkg/tide_vllm/: __init__.py
pkg/tide_vllm/application/: __init__.py  application.py  chat_handler.py
pkg/tide_vllm/domain/: __init__.py
pkg/tide_vllm/domain/chat/: __init__.py  entity.py  factory.py  repository.py
pkg/tide_vllm/infrastructure/: __init__.py
pkg/tide_vllm/infrastructure/vllm/: __init__.py  vllm_client.py  vllm_repository.py
pkg/tide_vllm/provider/: __init__.py  provider.py
scripts/: dev_install.sh
src/tide/: __init__.py  cli.py
src/tide/app/: __init__.py  application.py  command.py  hooks.py  plugin.py
src/tide/config/: __init__.py  config.py  loader.py
src/tide/ddd/: __init__.py  application.py  entity.py  error.py  factory.py  repository.py  value_object.py
src/tide/plugins/: __init__.py  log.py  monitor.py  mysql.py  opentelemetry.py  redis.py  webserver.py
src/tide/provider/: __init__.py  provider.py
web/: __init__.py
web/app/: __init__.py
web/app/tidedate/: __init__.py  router.py
web/modules/: __init__.py
web/modules/tidedate/: __init__.py  controller.py  error.py
web/modules/tidevllm/: __init__.py  controller.py
