[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tide"
dynamic = ["version"]
description = "Tide - Python Web/gRPC Service Framework based on Peek"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "kaydxh", email = "kaydxh@example.com"}
]
keywords = [
    "framework",
    "webserver",
    "grpc",
    "http",
    "microservice",
    "ddd",
    "clean-architecture",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
]
dependencies = [
    # 基础库 - peek
    # 开发调试时使用本地 peek: pip install -e /path/to/peek
    # 发布时切换为: "peek>=0.1.0",
    # "peek>=0.1.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # 配置
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    # Web
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    # HTTP 客户端
    "httpx>=0.25.0",
    # gRPC
    "grpcio>=1.57.0",
    "grpcio-tools>=1.57.0",
    "grpcio-health-checking>=1.57.0",
    "grpcio-reflection>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "pylint>=2.17.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
all = [
    "tide[dev]",
    "tide[database]",
    "tide[observability]",
]

[project.urls]
Homepage = "https://github.com/kaydxh/tide"
Documentation = "https://github.com/kaydxh/tide#readme"
Repository = "https://github.com/kaydxh/tide.git"
Issues = "https://github.com/kaydxh/tide/issues"

[project.scripts]
tide = "tide.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "tide.__version__"}

# Black 配置
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

# isort 配置
[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["tide", "peek"]

# pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

# mypy 配置
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
